4th commit better svg update

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -50,7 +50,7 @@ body
                     text-align: center
                     border-radius: 50%
 
-                    & svg
+                    & img
                         transform: translateY(20%) scale(0.9)
 
                 .rate_topline
