--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ body main .card_container .card_rating_container.active .star_svg_wrapper {
   text-align: center;
   border-radius: 50%;
 }
-body main .card_container .card_rating_container.active .star_svg_wrapper svg {
+body main .card_container .card_rating_container.active .star_svg_wrapper img {
   -webkit-transform: translateY(20%) scale(0.9);
           transform: translateY(20%) scale(0.9);
 }
